docs: comment about how to install

--- a/README
+++ b/README
@@ -7,6 +7,16 @@ de las propiedades tensoriales de la materia
 
 ## Installation
 
+To install simply run the following line of code inside the directory algebra_utilities/
+
+sudo python3 setup.py install
+
+To unistall simply run the following lines of code:
+
+sudo python3 setup.py install --record files.txt
+sudo xargs rm -rf < files.txt
+
+
 ## Tests
 
 ## Examples
